# rs-cv

./: .gitignore  Cargo.toml
src/: detector.rs  lib.rs  main.rs  model.rs  video.py
